# DevStewardAI

./: .gitignore  AI_BEST_PRACTICES.md  CLAUDE.md  PLANNING.md  README.md  TASKS.md  complete_prompts.md  package.json
src-py/: .env.example  main.py  pytest.ini  requirements-dev.txt  requirements.txt
src-py/core/: organizer.py  project_analyzer.py  utils.py
src-py/tests/: __init__.py  conftest.py  test_main.py  test_project_analyzer.py  test_utils.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs  process_manager.rs  python_bridge.rs  tests.rs  types.rs
src-ui/: package.json  tailwind.config.js
src-ui/src/: App.vue  style.css
src-ui/src/components/layout/: AppHeader.vue  AppSidebar.vue
src-ui/src/components/organizer/: GettingStarted.vue  OrganizationPreview.vue  OrganizationSettings.vue  ProjectScanner.vue  ScanResults.vue
src-ui/src/components/ui/: ErrorModal.vue  LoadingOverlay.vue  NotificationContainer.vue
src-ui/src/router/: index.ts
src-ui/src/stores/: appStore.ts
src-ui/src/views/: NewProjectView.vue  OrganizerView.vue  SettingsView.vue
