[package]
name = "devsteward-ai"
version = "1.0.0"
description = "AI-powered project organizer and bootstrapper"
authors = ["DevSteward AI Team"]
license = "MIT"
repository = "https://github.com/your-username/devsteward-ai"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = ["api-all"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
thiserror = "1.0"
uuid = { version = "1.0", features = ["serde", "v4"] }
log = "0.4"
env_logger = "0.10"
dirs = "5.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]